terraform/main.tf
provider "aws" {
    region = "eu-west-2"
    # access_key = ""
    # secret_key = ""
}

variable "sub_cidr_block" {
    description = "sub cidr block"
    default = "10.0.10.0/24"
    type = string
}

variable "my_ip" {}
variable "instance_type" {}
variable "ssh_key_private" {}

resource "aws_vpc" "marcos-vpc-test" {
    cidr_block = "10.0.0.0/16"
    tags = {
        Name = "marchito-vpc"
    }
    
}

resource "aws_subnet" "marcos-subnet-test" {
    vpc_id = aws_vpc.marcos-vpc-test.id
    cidr_block = var.sub_cidr_block
    availability_zone = "eu-west-2a"
    tags = {
        Name = "marcos-subnet1"
    }
    
}

data "aws_vpc" "sub-na-vpc-default" {
    default = true
}

resource "aws_subnet" "marcos-subnet2-test" {
    vpc_id = data.aws_vpc.sub-na-vpc-default.id
    cidr_block = "172.31.48.0/20"
    availability_zone = "eu-west-2a"
    tags = {
        Name = "marcos-subnet2"
    }
    
}

resource "aws_route_table" "marcos-table" {
    vpc_id = aws_vpc.marcos-vpc-test.id
    
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.marcos-gateway.id
        
    }
    
    tags = {
        Name = "marcos-table"
    }
}

resource "aws_internet_gateway" "marcos-gateway" {
    vpc_id = aws_vpc.marcos-vpc-test.id
     
}

resource "aws_route_table_association" "marcos-association" {
    subnet_id = aws_subnet.marcos-subnet-test.id
    route_table_id = aws_route_table.marcos-table .id
}

resource "aws_security_group" "marcos-sg" {
    name = "marcos-sg"
    vpc_id = aws_vpc.marcos-vpc-test.id
    
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = [var.my_ip]
    }
    
    ingress {
        from_port = 5150
        to_port = 5150
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0" ]
    }
    
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0" ]
    }
    
    tags = {
        Name = "marcos-sg-tag"
    }
    
}

data "aws_ami" "latest-amazon-linux-image" {
    most_recent = true
    owners = ["amazon"]
    filter {
        name = "name"
        values = ["amzn2-ami-hvm-*-gp2"]
    }
}

resource "aws_instance" "marcos-server" {
    ami = data.aws_ami.latest-amazon-linux-image.id
    instance_type = var.instance_type 
    subnet_id = aws_subnet.marcos-subnet-test.id
    vpc_security_group_ids = [aws_security_group.marcos-sg.id]
    availability_zone = "eu-west-2a"
    associate_public_ip_address = true
    key_name = "docker-server"
    
    # user_data = <<EOF
    #             
    #             #!/bin/bash
    #             
    #             sudo yum update -y && sudo yum install docker
    #             sudo systemctl start docker
    #             sudo usermod -aG docker $USER
    #             
    #             EOF
    
    tags = {
        Name = "marcos-server-tags"
    }
    
    provisioner "local-exec" {
        working_dir = "/Users/marcosjampietri/Downloads/Ansible"
        command = "ansible-playbook --inventory ${self.public_ip}, --private-key ${var.ssh_key_private} --user ec2-user docker-ec2-playbook.yaml"
    }
}
